--- a/package.json
+++ b/package.json
@@ -161,8 +161,7 @@
   "lint-staged": {
     "+(bin)/**/*.js": [
       "prettier-eslint --write --eslint-config-path .eslintrc.js",
-      "eslint -c .eslintrc.js",
-      "git add"
+      "eslint -c .eslintrc.js"
     ]
   }
 }
